components/helloworld/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: m5-application
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: helloworld
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elhelloworld
  namespace: demo
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-helloworld
    weight: null
status: {}
